--- a/bundle/src/syntax-style.html
+++ b/bundle/src/syntax-style.html
@@ -14,7 +14,7 @@ License for the specific language governing permissions and limitations under
 the License.
 -->
 
-<link rel="import" href="font-source-code-pro.html">
+<link rel="import" href="/src/font-source-code-pro.html">
 
 <dom-module id="syntax-style">
   <template>
