--- a/bundle/src/google-codelab-elements.html
+++ b/bundle/src/google-codelab-elements.html
@@ -1,3 +1,3 @@
-<link rel="import" href="../src/google-codelab-survey.html">
-<link rel="import" href="../src/google-codelab-step.html">
-<link rel="import" href="../src/google-codelab.html">
+<link rel="import" href="/src/google-codelab-survey.html">
+<link rel="import" href="/src/google-codelab-step.html">
+<link rel="import" href="/src/google-codelab.html">
