--- a/bundle/src/google-codelab-step.html
+++ b/bundle/src/google-codelab-step.html
@@ -14,12 +14,12 @@ License for the specific language governing permissions and limitations under
 the License.
 -->
 
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../src/shared-style.html">
-<link rel="import" href="../src/step-style.html">
+<link rel="import" href="/bower_components/polymer/polymer.html">
+<link rel="import" href="/src/shared-style.html">
+<link rel="import" href="/src/step-style.html">
 
-<link rel="import" href="../src/syntax-style.html">
-<script src="../bower_components/google-prettify/src/prettify.js"></script>
+<link rel="import" href="/src/syntax-style.html">
+<script src="/bower_components/google-prettify/src/prettify.js"></script>
 
 <!--
 A single codelab step for `<google-codelab>` element.
