css style update

--- a/bundle/src/step-style.html
+++ b/bundle/src/step-style.html
@@ -185,8 +185,10 @@ the License.
 
       .instructions ::content img {
         max-width: 100%;
-        width: 100%;
+        width: auto;
+        height: auto;
         vertical-align: bottom;
+        horiz-align: center;
       }
 
       .instructions ::content table {
